--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': 'Bearer YOUR_API_KEY_HERE'
+                    'Authorization': 'Bearer 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'
                 },
                 body: JSON.stringify({
                     model: 'gpt-3.5-turbo',
