--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <textarea id="prompt" class="w-full border rounded p-3" placeholder="Enter something about yourself (e.g., 'Travel blogger and coffee lover')"></textarea>
         <button onclick="generateBio()" class="mt-4 px-6 py-2 bg-indigo-500 text-white rounded">Generate Bio ✨</button>
         <div id="output" class="mt-4 text-left font-medium text-gray-800"></div>
-        <a href="YOUR_GUMROAD_LINK_HERE" class="block mt-6 underline text-indigo-600 font-bold">Get unlimited bios for $10/month →</a>
+        <a href="https://josephbright.gumroad.com/l/xmmhv" class="block mt-6 underline text-indigo-600 font-bold">Get unlimited bios for $10/month →</a>
     </div>
 
     <script>
